# hold-guard

./: Cargo.toml  README.md  deny.toml
agent/: intent-card.json  proof-lanes.toml  test-map.json
src/: event.rs  evict.rs  ledger.rs  main.rs  measure.rs  policy.rs
tests/: ac1_help.rs  ac2_under_cap.rs  ac3_over_cap.rs  ac4_enforce_apply.rs  ac5_event_schema.rs  ac6_held_lock.rs  ac7_dry_run.rs  ac8_ledger_append.rs  ac9_ts_flag.rs  acceptance_ac1.rs  acceptance_ac2.rs  acceptance_ac3.rs  acceptance_ac4.rs  acceptance_ac5.rs  acceptance_ac6.rs  acceptance_ac7.rs  acceptance_ac8.rs  acceptance_ac9.rs  proptest_invariants.rs
